Add seeding controls
